force-app/main/default/objects/maps__Layer__c/maps__Layer__c.object-meta.xml
<CustomObject>
    <label>Maps Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>