force-app/main/default/objects/maps__Layer__c/fields/maps__EmailOnAggregationSuccess__c.field-meta.xml
<CustomField>
    <fullName>maps__EmailOnAggregationSuccess__c</fullName>
    <label>Email On Aggregation Success</label>
    <type>Email</type>
</CustomField>