force-app/main/default/objects/maps__Layer__c/fields/maps__Folder__c.field-meta.xml
<CustomField>
    <fullName>maps__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Folder</label>
    <referenceTo>maps__Folder__c</referenceTo>
    <relationshipLabel>Maps Layers</relationshipLabel>
    <relationshipName>Maps_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>