force-app/main/default/objects/maps__Layer__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <inlineHelpText>Used to determine what layer type the record represents.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Layer</fullName>
            </value>
            <value>
                <fullName>Tile Set</fullName>
            </value>
            <value>
                <fullName>ArcGIS Online</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>