force-app/main/default/objects/maps__Layer__c/fields/maps__User__c.field-meta.xml
<CustomField>
    <fullName>maps__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated if directly under a user&apos;s personal folder, otherwise blank. If blank and the folder lookup is blank this will appear on the corporate folder. If the folder is filled out it could be a personal or corporate folder.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maps_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>