force-app/main/default/objects/maps__Layer__c/fields/maps__Version__c.field-meta.xml
<CustomField>
    <fullName>maps__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>