force-app/main/default/objects/maps__Layer__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <columns>maps__Folder__c</columns>
    <columns>maps__User__c</columns>
    <columns>maps__Options__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>